Fixed selectable multi-select and fixed text overflow tooltips.

--- a/symphony/assets/css/symphony.css
+++ b/symphony/assets/css/symphony.css
@@ -631,7 +631,8 @@
 	}
 
 	/* Table cell */
-	section.table article dd {
+	section.table article dd,
+	section.table article dd div.text {
 		overflow: hidden;
 		text-overflow: ellipsis;
 	}
